radware-ops/mallikarjun/morninglab.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: lab1
  labels:
    name: lab1


---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lab1
  name: nginx-1
  labels:
    app: nginx-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-1
  namespace: lab1
spec:
  selector:
    app.kubernetes.io/name: nginx-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-2
  namespace: lab1
  labels:
    app: nginx-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-2
  namespace: lab1
spec:
  selector:
    app.kubernetes.io/name: nginx-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
